clusters/steph/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
  selector:
    app: traefik
